[gd_scene load_steps=23 format=3 uid="uid://p2lwv8jb0i0f"]

[ext_resource type="PackedScene" uid="uid://cxkm6pfn74r7c" path="res://characters/enemy/enemy.tscn" id="1_lh0as"]
[ext_resource type="Texture2D" uid="uid://bbcx2sidii0gu" path="res://characters/enemy/armor_kabuto/assets/armor_kabuto_idle.png" id="2_c73s7"]
[ext_resource type="Script" path="res://characters/enemy/armor_kabuto/armor_kabuto.gd" id="2_gnakq"]
[ext_resource type="Texture2D" uid="uid://d1rlhn0hb76xc" path="res://characters/enemy/armor_kabuto/assets/armor_kabuto_patrol.png" id="3_skcqg"]
[ext_resource type="Script" path="res://utils/state_machine/state_machine.gd" id="4_kfg22"]
[ext_resource type="Texture2D" uid="uid://dvalcnjpk0ed4" path="res://characters/enemy/armor_kabuto/assets/armor_kabuto_attack_1.png" id="4_y57sa"]
[ext_resource type="Script" path="res://characters/enemy/armor_kabuto/states/idle.gd" id="5_jfd8g"]
[ext_resource type="Texture2D" uid="uid://c8egno3d6c6sl" path="res://characters/enemy/armor_kabuto/assets/armor_kabuto_hurt.png" id="5_u0jyk"]
[ext_resource type="Script" path="res://characters/enemy/armor_kabuto/states/patrol.gd" id="6_1uxw7"]
[ext_resource type="Texture2D" uid="uid://cb0elbltxtp21" path="res://characters/enemy/armor_kabuto/assets/armor_kabuto_death.png" id="6_xrnvp"]
[ext_resource type="Script" path="res://characters/enemy/armor_kabuto/states/attack.gd" id="7_vo6np"]
[ext_resource type="Script" path="res://characters/enemy/masked_bandit/enemy_detection.gd" id="8_emqa2"]
[ext_resource type="Script" path="res://characters/enemy/armor_kabuto/states/hurt.gd" id="8_iqdab"]
[ext_resource type="Script" path="res://characters/enemy/armor_kabuto/states/death.gd" id="9_qtev6"]
[ext_resource type="Script" path="res://characters/enemy/armor_kabuto/hitbox/hitbox.gd" id="15_dscmb"]

[sub_resource type="Animation" id="Animation_j5538"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemySprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_c73s7")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("EnemySprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("EnemySprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Combat/CombatAreaDetection:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Combat/CombatAreaDetection/CombatHitBody:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Combat/CombatAreaDetection/CombatHitBody:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_0o0pj"]
resource_name = "attack_1"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemySprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_y57sa")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("EnemySprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("EnemySprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Combat/CombatAreaDetection:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Combat/CombatAreaDetection/CombatHitBody:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Combat/CombatAreaDetection/CombatHitBody:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}

[sub_resource type="Animation" id="Animation_m78y2"]
resource_name = "death"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemySprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("6_xrnvp")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("EnemySprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0.1),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("EnemySprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_8kvan"]
resource_name = "hurt"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemySprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_u0jyk")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("EnemySprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("EnemySprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_hhy8l"]
resource_name = "idle"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemySprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_c73s7")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("EnemySprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("EnemySprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_aeusf"]
resource_name = "patrol"
length = 1.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("EnemySprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_skcqg")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("EnemySprite:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("EnemySprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_hhbew"]
_data = {
"RESET": SubResource("Animation_j5538"),
"attack_1": SubResource("Animation_0o0pj"),
"death": SubResource("Animation_m78y2"),
"hurt": SubResource("Animation_8kvan"),
"idle": SubResource("Animation_hhy8l"),
"patrol": SubResource("Animation_aeusf")
}

[node name="ArmorKabuto" instance=ExtResource("1_lh0as")]
scale = Vector2(0.75, 0.75)
script = ExtResource("2_gnakq")
health = 3

[node name="EnemySprite" parent="." index="0"]
texture = ExtResource("2_c73s7")
hframes = 4

[node name="EnemyBodyShape" parent="." index="1"]
position = Vector2(-0.666667, -5.33333)

[node name="StateMachine" parent="." index="2"]
script = ExtResource("4_kfg22")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine" index="0"]
script = ExtResource("5_jfd8g")

[node name="IdleTimer" type="Timer" parent="StateMachine/Idle" index="0"]
process_callback = 0
one_shot = true

[node name="Patrol" type="Node" parent="StateMachine" index="1"]
script = ExtResource("6_1uxw7")

[node name="Attack" type="Node" parent="StateMachine" index="2"]
script = ExtResource("7_vo6np")

[node name="AttackCoolDown" type="Timer" parent="StateMachine/Attack" index="0"]
process_callback = 0
wait_time = 2.0
one_shot = true

[node name="Hurt" type="Node" parent="StateMachine" index="3"]
script = ExtResource("8_iqdab")

[node name="Death" type="Node" parent="StateMachine" index="4"]
script = ExtResource("9_qtev6")

[node name="EnemyDetection" parent="." index="3"]
target_position = Vector2(30, 0)
script = ExtResource("8_emqa2")

[node name="EnemyAnimationPlayer" parent="." index="4"]
libraries = {
"": SubResource("AnimationLibrary_hhbew")
}

[node name="CombatAreaDetection" type="Area2D" parent="Combat" index="0"]
visible = false
collision_layer = 8
collision_mask = 8

[node name="CombatHitBody" type="CollisionPolygon2D" parent="Combat/CombatAreaDetection" index="0"]
visible = false
polygon = PackedVector2Array(26.6667, 6.66667, 33.3333, 0, 34.6667, -9.33333, 29.3333, -16, 17.3333, -21.3333, 10.6667, -22.6667, 22.6667, -32, 33.3333, -25.3333, 41.3333, -13.3333, 36, 0, 26.6667, 9.33333)
disabled = true

[node name="HitBox" parent="." index="6"]
position = Vector2(0, -13.3333)
collision_layer = 16
collision_mask = 16

[node name="HitBoxShape" parent="HitBox" index="0"]
position = Vector2(-0.333333, 8.33333)
script = ExtResource("15_dscmb")

[connection signal="timeout" from="StateMachine/Idle/IdleTimer" to="StateMachine/Idle" method="_on_idle_timer_timeout"]
[connection signal="timeout" from="StateMachine/Attack/AttackCoolDown" to="StateMachine/Attack" method="_on_attack_cool_down_timeout"]
[connection signal="area_entered" from="HitBox" to="HitBox/HitBoxShape" method="_on_hit_box_area_entered"]
